ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0
    • Affects Version/s: 4.5 Desired
    • Component/s: Testing Infrastructure
    • None
    • Fully Compatible
    • ALL
    • Dev Platform 2020-06-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Stack trace tests are failing with TSAN, but they are not reporting any stack traces. This is likely because there are stack traces being produced by some failure that TSAN is intercepting, which means that the test harness is not parsing output that it's expecting. A similar thing happened with the death tests as well. We should find out why those tests are failing and add appropriate suppressions or otherwise fix the way the tests parse output to get them passing with TSAN.

            Assignee:
            Ryan Egesdahl (Inactive)
            Reporter:
            Ryan Egesdahl (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: